--- a/papers.html
+++ b/papers.html
@@ -32,7 +32,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> EffFix: Efficient and Effective Repair of Pointer Manipulating Programs
-		(<a href="./pdf/EffixTOSEM25.pdf">PDF</a>)</b></p>
+		(<a href="https://dl.acm.org/doi/pdf/10.1145/3705310">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
 
