--- a/papers.html
+++ b/papers.html
@@ -49,7 +49,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Selectively Uniform Concurrency Testing
-		(<a href="./pdf/asplos25.pdf">PDF</a>)</b></p>
+		(<a href="./pdf/ASPLOS25_final.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 30th ACM International Conference on Architectural Support for 
 		Programming Languages and Operating Systems (ASPLOS) 2025. </p> 
