--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, <i>Stay tuned!</i>
 	</font>
 	<br><br>
+
+	<li> <a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD, and looking for faculty positions !
+
+	</li>
         
 			<li>
 		<font face="Arial">
