--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 	</font>
 	<br><br>
 
-	<li> <a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD, and looking for faculty positions !
-
-	</li>
+	<li> <font face="Arial">
+		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD, and looking for faculty positions !
+	</font>
+	<br><br>
         
 			<li>
 		<font face="Arial">
