--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<br><br>
 
 	<li> <font face="Arial">
-		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD, and looking for faculty positions !
+		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD work on fuzzing, and looking for faculty positions !
 	</font>
 	<br><br>
         
