--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<a href ="https://nus-tss.github.io">TSS group@NUS</a></font>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
+		<i><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></i><br>
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
 			<br><br><u>Admin Manager</u>:
