--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
+		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School Profile</a>
+		</b><br>
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
 			<br><br><u>Admin Manager</u>:
