--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 	
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
-			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font>
-		<br><br>
-		<font face="Arial" size="2">
-		<a href="https://nus-apr.github.io/">APR</a><br>
-		<a href="https://nus-tss.github.io/fuzzing/">Fuzzing</a><br>	
-		<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
-		<a href ="https://nus-tss.github.io">TSS group@NUS</a></font>
-		<br>
+			National University of Singapore</font>
+		<br><br><br>
+		
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School Profile</a>
-		</b><br>
+		</b><br><br><br>
+
+		
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
-			<br><br><u>Admin Manager</u>:
+			<br><br><br>
+			<u>Admin Manager</u>:
 			<br> Neo Chee Yong
 			<br><i>neocy at nus.edu.sg</i>	
 		</span></font></H3>            			
