--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<br><br><br>
 		
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
+		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b><br>
 		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School Profile</a>
 		</b><br><br><br>
