--- a/papers.html
+++ b/papers.html
@@ -21,6 +21,14 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Yuntong Zhang, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025. </p>  
 
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25-SEIP]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Supply Chain Protection via Program Analysis 
+		(<a href="./pdf/ICSE25-SEIP.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">R. Shariffdeen, B. Hassanshahi, M. Mirchev, A. Husseini, A. Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025, SEIP track. </p>  
+
+
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25-special issue]</b></p>
