--- a/papers.html
+++ b/papers.html
@@ -9,7 +9,7 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM Editorial]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Editorial: TOSEM journal in 2025 and beyond
-		(<a href="./pdf/TOSEMeditorial2025.pdf">PDF</a>)</b></p>
+		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708477">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC, Jan 2025. </p>  
 	 
@@ -33,7 +33,7 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25-special issue]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automatic Programming: Large Language Models and Beyond 
-		(<a href="https://arxiv.org/abs/2405.02213">PDF</a>)</b></p>
+		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708519">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">MR Lyu, B Ray, Abhik Roychoudhury, Shin Hwei Tan, P Thongtanunam</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), April 2025. </p> 
 
