--- a/papers.html
+++ b/papers.html
@@ -23,12 +23,18 @@
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25-SEIP]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Supply Chain Protection via Program Analysis 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Supply Chain Protection via Program Analysis
 		(<a href="./pdf/ICSE2025-SEIP.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">R. Shariffdeen, B. Hassanshahi, M. Mirchev, A. Husseini, A. Roychoudhury </p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025, SEIP track. </p>  
 
-
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CSEE&T25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an Intelligent Tutoring System
+		(<a href="./pdf/CSEET25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 37th IEEE Conference on Software Engineering Education and Training (CSEE&T 2025), co-located with ICSE 2025.
+</p>  
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25-special issue]</b></p>
