--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@
 	</font>   		
 
 
-	<p><font face="Arial">Software testing and analysis, Software security, Trustworthy systems.</font></p>
+	<p><font face="Arial">Software testing and analysis, Automatic Programming, Program Repair, Trustworthy systems.</font></p>
 
 <ul>
 	<li> <font face="Arial"><a href="papers.html">[All Papers]</a></font></li>
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
+	<li><font face="Arial">
 	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
 	 	
