--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		<a href="https://autocoderover.dev">AutoCodeRover</a>, AI SWE - 
+		<a href="https://autocoderover.dev">AutoCodeRover</a>, LLMs for Software Engineering - 
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, <i>Stay tuned!</i>
 	</font>
