--- a/papers.html
+++ b/papers.html
@@ -12,7 +12,14 @@
 		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708477">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC, Jan 2025. </p>  
-	 
+
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CSEE&T25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an Intelligent Tutoring System
+		(<a href="./pdf/CSEET25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 37th IEEE Conference on Software Engineering Education and Training (CSEE&T 2025), co-located with ICSE 2025.
+</p>  
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
@@ -23,12 +30,20 @@
 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CSEE&T25]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an Intelligent Tutoring System
-		(<a href="./pdf/CSEET25.pdf">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury </p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 37th IEEE Conference on Software Engineering Education and Training (CSEE&T 2025), co-located with ICSE 2025.
-</p>  
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Detecting Python Malware in the Software Supply Chain with Program Analysis
+		(<a href="./pdf/ICSE25_SEIP.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">R Shariffdeen, B Hassanshahi, M Mirchev, A ElHusseini, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025, SEIP track. </p>  
+
+	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Selectively Uniform Concurrency Testing
+		(<a href="./pdf/ASPLOS25_final.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 30th ACM International Conference on Architectural Support for 
+		Programming Languages and Operating Systems (ASPLOS) 2025. </p> 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25-special issue]</b></p>
@@ -51,17 +66,6 @@
 		(<a href="https://dl.acm.org/doi/pdf/10.1145/3707454">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Christopher Timperley, Yannic Noller, Claire Le Goues, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
-
-	 
-
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Selectively Uniform Concurrency Testing
-		(<a href="./pdf/ASPLOS25_final.pdf">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 30th ACM International Conference on Architectural Support for 
-		Programming Languages and Operating Systems (ASPLOS) 2025. </p> 
-
 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
