--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@
 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25-SEIP]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Detecting Python Malware in the Software Supply Chain with Program Analysis
 		(<a href="./pdf/ICSE25_SEIP.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">R Shariffdeen, B Hassanshahi, M Mirchev, A El Husseini, Abhik Roychoudhury</p>
