--- a/papers.html
+++ b/papers.html
@@ -19,7 +19,7 @@
 		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708519">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">MR Lyu, B Ray, Abhik Roychoudhury, Shin Hwei Tan, P Thongtanunam</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 
-		Special issue for Software Engineering 2030 workshop, To appear April 2025. </p> 
+		Special issue for Software Engineering 2030 workshop held with FSE 2024. </p> 
 
 	 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
