--- a/papers.html
+++ b/papers.html
@@ -25,7 +25,7 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CSEE&T25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an Intelligent Tutoring System
-		(<a href="./pdf/CSEET25.pdf">PDF</a>)</b></p>
+		(<a href="https://arxiv.org/pdf/2310.05472">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury </p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 37th IEEE Conference on Software Engineering Education and Training (CSEE&T 2025), co-located with ICSE 2025.
 </p>  
