--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>.  
-		His research group is known for foundational contributions to software testing and analysis. Specifically 
+		His research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
 		the team has made contributions to automatic programming and automated program repair, as well as to 
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
@@ -114,6 +114,7 @@
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as
 		chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
+		He is the Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem"TOSEM</a>). 
 		Abhik received his PhD in Computer Science 
 		from <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000.
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
