--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is the Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>). 
 		Abhik received his PhD in Computer Science 
-		from <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000.
+		from the <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000.
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
