--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>.  
-		His research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
+	        Trustworthy and Secure Software (TSS)</a>.  Abhik received his PhD in Computer Science 
+		from the <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000, 
+		and has been a faculty member at NUS School of Computing since 2001.
+                <br><br>
+		Abhik's research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
 		the team has made contributions to automatic programming and automated program repair, as well as to 
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
@@ -112,11 +115,9 @@
 		Max Planck Institute, NUS, University College London, University of Melbourne, and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
-		Currently, he serves as
-		chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is the Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>). 
-		Abhik received his PhD in Computer Science 
-		from the <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000.
+		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
+		He is the current Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>). 
+		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
