--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
+	<li> Jan 2025: 
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a></li>	
         <li> <font face="Arial">
 		<a href="https://autocoderover.dev">AutoCodeRover</a>, LLM for Software Engg.,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
