--- a/papers.html
+++ b/papers.html
@@ -11,7 +11,15 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Editorial: TOSEM journal in 2025 and beyond
 		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708477">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC, Jan 2025. </p>  
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), 
+		Editorial as Incoming EiC, Jan 2025. </p>  
+
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TSE]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>AFLNet Five Years Later: On Coverage-Guided Protocol Fuzzing
+		(<a href="./pdf/TSE25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Van-Thuan Pham, Marcel Böhme, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE Transactions on Software Engineering, 2025, To appear. </p>   
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM-special issue]</b></p>
