--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
-	<li> Jan 2025: 
-	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a></li>	
-        <li> <font face="Arial">
+	<li> <font face="Arial">Jan 2025: 
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a></font>
+		<br><br>
+        
+		<li> <font face="Arial">
 		<a href="https://autocoderover.dev">AutoCodeRover</a>, LLM for Software Engg.,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, <i>Stay tuned!</i>
