--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
-	<li> <font face="Arial">Jan 2025: 
-	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a></font>
+	<li> <font face="Arial">
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a>
+	( <a href="https://www.comp.nus.edu.sg/bytes/acm-fellows-2024/">NUS coverage</a>,
+	  <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">from alma mater</a>)
+	
+	</font>
 		<br><br>
         
 		<li> <font face="Arial">
