--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is the current Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>). 
+		He is the current Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>),
+		and is a member of the editorial board of Communications of the ACM. 
 		Abhik is a Fellow of the ACM.
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
