--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
 	<li> <font face="Arial">
-	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">People of ACM profile</a>
-	( <a href="https://www.comp.nus.edu.sg/bytes/acm-fellows-2024/">NUS coverage</a>,
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">Coverage from ACM</a>
+	( <a href="https://www.comp.nus.edu.sg/bytes/acm-fellows-2024/">from NUS</a>,
 	  <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">from alma mater</a>)
 	</font>
 		<br><br>
