--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
 	<li> <font face="Arial"> Profile 
-	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury"><i>from ACM</i></a>
 	( from <a href="https://www.comp.nus.edu.sg/bytes/acm-fellows-2024/"><i>NUS</i></a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow"><i>alma mater</i></a>)
 	</font>
