--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>.  Abhik received his PhD in Computer Science 
-		from the <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000, 
+		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
                 <br><br>
 		Abhik's research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
