--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<br><br>
         
 		<li> <font face="Arial">
-		<a href="https://autocoderover.dev">AutoCodeRover</a>, LLM for Software Engg.,
+		AutoCodeRover, LLM agent for Software Engg.,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, <i>Stay tuned!</i>
 	</font>
