--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		contributions to symbolic execution.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
-		Max Planck Institute, NUS, University College London, University of Melbourne, and Peking University. 
+		Max Planck Institute, NUS, University College London, University of Melbourne, Peking University and Concordia University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
