--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 		the team has made contributions to automatic programming and automated program repair, as well as to 
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
-		contributions to symbolic execution.
+		(Test-of-time award) for program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
+		contributions to symbolic execution for test generation and program repair.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, NUS, University College London, University of Melbourne, Peking University and Concordia University. 
