--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 		<li> <font face="Arial">
 		AutoCodeRover, LLM agent for Software Engg.,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
-		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, <i>Stay tuned!</i>
+		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
+			<i><b><a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a></b></i>
 	</font>
 	<br><br>
 
