--- a/index.html
+++ b/index.html
@@ -108,10 +108,11 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>.  Abhik received his PhD in Computer Science 
+	        Trustworthy and Secure Software (TSS)</a>. He is also a Senior Advisor at SonarSource, subsequent to the acquisiton of his spinoff AutoCodeRover on AI-based coding, by Sonar.
+		<br><br>
+		Abhik received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-                <br><br>
 		Abhik's research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
 		the team has made contributions to automatic programming and automated program repair, as well as to 
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
