--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
 			National University of Singapore</font>
+		and <br>
+		Senior Advisor, <a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
-		
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b><br>
 		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
@@ -108,7 +109,9 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>. He is also a Senior Advisor at SonarSource, subsequent to the acquisiton of his spinoff AutoCodeRover on AI-based coding, by Sonar.
+	        Trustworthy and Secure Software (TSS)</a>. He is also a Senior Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
+		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisiton </a>
+		of his spinoff AutoCodeRover on AI-based coding, by Sonar.
 		<br><br>
 		Abhik received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
