--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
-			National University of Singapore<br>
+			National University of Singapore
+		<br>
 		and <br>
 		Senior Advisor, <a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
