--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. He is also a Senior Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
-		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisiton </a>
+		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition </a>
 		of his spinoff AutoCodeRover on AI-based coding, by Sonar.
 		<br><br>
 		Abhik received his PhD in Computer Science 
