--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
-			National University of Singapore
+			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
 		<br>
 		and <br>
 		Senior Advisor, <a href="https://www.sonarsource.com/">SonarSource</a>
