--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<br><br>
         
 		<li> <font face="Arial">
-		AutoCodeRover, LLM agent for Software Engg.,
+		AutoCodeRover, LLM agent for Software Engg,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
 			<b><a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a></b>
@@ -111,7 +111,7 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. He is also a Senior Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
-		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition </a>
+		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
 		of his spinoff AutoCodeRover on AI-based coding, by Sonar.
 		<br><br>
 		Abhik received his PhD in Computer Science 
