--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 	<br><br>
 
 	<li> <font face="Arial">
-		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD on fuzzing. She is looking for faculty positions !
+		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD on fuzzing. 
+		She is looking for Assistant Professor positions !
 	</font>
 	<br><br>
         
