--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
-        <li> <font face="Arial"><a href= "https://arxiv.org/abs/2405.02213">Opinion Piece</a> on AI Software Engineer of the future!</font>
+        <li> <font face="Arial"><a href= "https://arxiv.org/abs/2405.02213">Opinion Piece</a> on AI powered Software!</font>
 		<br><br>	
 	<li> <font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury"><i>from ACM</i></a>
