--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <li> <font face="Arial"><a href= "https://arxiv.org/abs/2502.13767"><b>Opinion Piece</b></a> on AI powered Software!</font>
 		<br><br>	
 	<li> <font face="Arial"> Profile 
-	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury"><i>from ACM</i></a>
-	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/"><i>NUS</i></a>,
-	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow"><i>alma mater</i></a>)
+	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
+	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/">NUS</a>,
+	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
 		<li> <font face="Arial">
 		<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>, LLM agent for Software Engg,
