--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
 		<br>
 		and <br>
-		Scientific Advisor, <a href="https://www.sonarsource.com/">SonarSource</a>
+		Senior Scientific Advisor
+		<a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b><br>
@@ -111,7 +112,7 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>. He is also Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
+	        Trustworthy and Secure Software (TSS)</a>. He is also Senior Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
 		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
 		of his spinoff AutoCodeRover on AI-based coding, by Sonar.
 		<br><br>
