--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
 		<br>
 		and <br>
-		Senior Scientific Advisor
+		Senior Scientific Advisor<br>
 		<a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
@@ -114,7 +114,7 @@
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. He is also Senior Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
 		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
-		of his spinoff AutoCodeRover on AI-based coding, by Sonar.
+		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI-based coding, by Sonar.
 		<br><br>
 		Abhik received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
