--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. He is also Senior Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
 		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
-		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI-based coding, by Sonar.
+		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI-based coding, by SonarSource.
 		<br><br>
 		Abhik received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
