--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	PRESS RELEASE</a></b>
 	</font></p>
 		
-          <img border="0" src="abhik-pictures/AutoCodeRover.png" width="480" height="200">
+          <img border="0" src="abhik-pictures/AutoCodeRover.jpg" width="480" height="200">
 		</li> 
 		
 
