--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <ul>
 	<li> <p> <font face="Arial"> Feb 2025: <a href="https://autocoderover.dev">AutoCodeRover</a>, our AI Software Engineer embodying agentic  
 	AI and a NUS spinoff, is acquired by <a href="https://sonarsource.com">SonarSource</a>. Following is a group photo 
-	of the core AutoCodeRover team: Haifeng Ruan, Yuntong Zhang, Ridwan Shariffdeen, Martin Mirchev and myself. <br>
+	of the core AutoCodeRover team: Haifeng Ruan, Yuntong Zhang, Ridwan Shariffdeen, Martin Mirchev and myself. <br><br>
 	<b><a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 	PRESS RELEASE</a></b>
 	</font></p>
