--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
 <ul>
 	<li> <p> <font face="Arial"> Feb 2025: <a href="https://autocoderover.dev">AutoCodeRover</a>, our AI Software Engineer embodying agentic  
 	AI and a NUS spinoff, is acquired by <a href="https://sonarsource.com">SonarSource</a>. Following is a group photo 
-	of the core AutoCodeRover team: Haifeng Ruan, Yuntong Zhang, Ridwan Shariffdeen, Martin Mirchev and myself. <br><br>
+	of the core AutoCodeRover team taken on the day after acquisition: 
+	<a href="https://www.linkedin.com/in/ruan-haifeng/?locale=en_US">Haifeng Ruan</a>,
+	<a href="https://yuntongzhang.github.io/">Yuntong Zhang</a, 
+	<a href="https://rshariffdeen.com/">Ridwan Shariffdeen</a>, 
+	<a href="https://scholar.google.com/citations?user=ByLkuBgAAAAJ&hl=bg">Martin Mirchev</a> and myself. <br><br>
 	<b><a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 	PRESS RELEASE</a></b>
 	</font></p>
