--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	AI and a NUS spinoff, is acquired by <a href="https://sonarsource.com">SonarSource</a>. Following is a group photo 
 	of the core AutoCodeRover team taken on the day after acquisition: 
 	<a href="https://www.linkedin.com/in/ruan-haifeng/?locale=en_US">Haifeng Ruan</a>,
-	<a href="https://yuntongzhang.github.io/">Yuntong Zhang</a, 
+	<a href="https://yuntongzhang.github.io/">Yuntong Zhang</a>, 
 	<a href="https://rshariffdeen.com/">Ridwan Shariffdeen</a>, 
 	<a href="https://scholar.google.com/citations?user=ByLkuBgAAAAJ&hl=bg">Martin Mirchev</a> and myself. <br><br>
 	<b><a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
