--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
-		contributions to symbolic execution (for test generation and program repair).
+		contributions to symbolic execution (for test generation and program repair). Abhik is a <i>Fellow of the ACM</i>.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, NUS, University College London, University of Melbourne, Peking University and Concordia University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is the current Editor-in-Chief of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>),
+		He is the current <i>Editor-in-Chief</i> of the ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>),
 		and is a member of the editorial board of Communications of the ACM. 
-		Abhik is a Fellow of the ACM.
+		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
