--- a/papers.html
+++ b/papers.html
@@ -19,6 +19,13 @@
 	 
 	 <H2><font face="Arial" color="#800000" size="4">Opinion Piece </font></H2>    <hr>    
 
+        <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Will AI replace Software Engineers? Hold your Breath
+		(<a href="https://arxiv.org/">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Andreas Zeller</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv Feb 27 2025, commentary on future Software industry. </p>  
+	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>AI Software Engineer: Programming with Trust
