--- a/papers.html
+++ b/papers.html
@@ -31,7 +31,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>AI Software Engineer: Programming with Trust
 		(<a href="https://arxiv.org/abs/2502.13767">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Corina Păsăreanu, Michael Pradel, Baishakhi Ray</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv Feb 2025, coinciding with AutoCodeRover 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv Feb 19 2025, coinciding with AutoCodeRover 
 		acquisition by SonarSource. </p>  
 			 
 			 
