--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
-        <li> <font face="Arial"><a href= "https://arxiv.org/abs/2502.13767"><b>Opinion Piece</b></a> on AI powered Software!</font>
-		<br><br>	
+        
 	<li> <font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
 	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/">NUS</a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
+		<li>Opinion Piece on <font face="Arial"><a href= "https://arxiv.org/abs/2502.13767">AI powered software/a> 
+		and software jobs of future!</font>
+		<br><br>	
 		<li> <font face="Arial">
 		<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>, LLM agent for Software Engg,
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
