--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/">NUS</a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
-		<li>Opinion Piece on <font face="Arial"><a href= "https://arxiv.org/abs/2502.13767">AI powered software/a> 
+		<li><font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">AI powered software</a> 
 		and software jobs of future!</font>
 		<br><br>	
 		<li> <font face="Arial">
