--- a/papers.html
+++ b/papers.html
@@ -24,7 +24,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Will AI replace Software Engineers? Hold your Breath
 		(<a href="https://arxiv.org/">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Andreas Zeller</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv Feb 27 2025, commentary on future Software industry. </p>  
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv March 2025, commentary on future Software industry. </p>  
 	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
