--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@
         <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Will AI replace Software Engineers? Hold your Breath
-		(<a href="https://arxiv.org/">To appear</a>)</b></p>
+		(<a href="https://arxiv.org/abs/2502.20429">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Andreas Zeller</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv March 2025, commentary on future Software industry. </p>  
 	
