--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
 		<li><font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">AI powered software</a> 
-		and software jobs of future!</font>
+		and <a href="https://arxiv.org/abs/2502.20429">software industry</a> of future!</font>
 		<br><br>	
 		<li> <font face="Arial">
 		<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>, LLM agent for Software Engg,
