--- a/index.html
+++ b/index.html
@@ -121,21 +121,23 @@
 		Abhik received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
+		His research group at NUS is known for foundational contributions to software testing and analysis. Specifically 
 		the team has made contributions to automatic programming and automated program repair, as well as to 
 		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
-		contributions to symbolic execution (for test generation and program repair). Abhik is a Fellow of the ACM.
+		contributions to symbolic execution (for test generation and program repair). 
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, NUS, University College London, University of Melbourne, Peking University and Concordia University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is a member of the editorial board of Communications of the ACM. Abhik is the 
+		He is a member of the editorial board of Communications of the ACM. He is the 
 		current Editor-in-Chief of the 
 		ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>).
+		<br><br>
+		Abhik is a Fellow of the ACM.
 		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
