--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		current Editor-in-Chief of the 
 		ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>).
 		<br><br>
-		Abhik is a Fellow of the ACM.
+		Abhik is a <a href="https://awards.acm.org/award-recipients/roychoudhury_UJ52779">Fellow of the ACM</a>.
 		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
