--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
 		and <a href="https://arxiv.org/abs/2502.20429">software jobs</a> of future!</font>
 		<br><br>	
 		<li> <font face="Arial">
+			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
 		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
-			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>, <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a>,
+			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI based coding, 
 			<a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a>
 	</font>
 	<br><br>
