--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@ spanning an entire year.
 <br>
 <ul> 
 <li>
+	<p><font face="Arial">
+Talk on the journey behind AutoCodeRover Large Language Model agent, 2025</p>
+<iframe width="1038" height="519" src="https://www.youtube.com/embed/o8B6q8FNC70" 
+	title="AutoCodeRover: from research on Automatic Programming to Spinoff Acquisition" 
+	frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+	web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</li><br>	
+<li>
 	
 	
 		<p><font face="Arial">
