--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
-			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI based coding, 
-			<a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a>
+			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI + coding, 
+			<a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a>.
 	</font>
 	<br><br>
 
