--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
-			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI + coding, 
+			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI 
+			powered software, 
 			<a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a>!.
 	</font>
 	<br><br>
 
-	<li> <font face="Arial">
-		<a href= "https://mengrj.github.io/">Ruijie Meng</a> is finishing her PhD on fuzzing.  
-		Looking for Assistant Professor positions !
-	</font>
-	<br><br>
+	
         
 			<li>
 		<font face="Arial">
