--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 		(Test-of-time award) for program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
 		contributions to symbolic execution (for test generation and program repair). 
                 <br><br>
-		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
-		Max Planck Institute, NUS, University College London, University of Melbourne, Peking University and Concordia University. 
+		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
