--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
 		<li><font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> 
-		and <a href="https://arxiv.org/abs/2502.20429">software jobs</a>,  <b><a href="./pdf/AISE.pdf">Manifesto</a></b>!</font>
+		and <a href="https://arxiv.org/abs/2502.20429">software jobs</a>,  <b><a href="./pdf/AISE-full.pdf">Manifesto</a></b>!</font>
 		<br><br>	
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
