--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 		applications of program analysis to areas such as computer security, agentic AI or cyber-physical systems. 
 		These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for (symbolic analysis based) program repair, IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
+		(Test-of-time award) for (symbolic analysis based) program repair, 
+		IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
 		contributions to symbolic execution. 
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. 
