--- a/service.html
+++ b/service.html
@@ -35,17 +35,23 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><b><a href="http://issta2016.cispa.saarland/">ISSTA 2016</a></b><i>, 
 	(venue Germany), Program Chair<b>.</b></i></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;</p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<b><i>Associate Editor of Journals</i></b></p>
+	
+		<b><i>Editor-in-Chief and  Editor of Journals</i></b></p>
 	   <p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-			Communications of the ACM, from 2023.</i></p>
+	  Editor-in-Chief, ACM Transactions on Software Engineering and Methodology, from 2025.
+	   <p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+			Associate Editor, Communications of the ACM, from 2023.</i></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
 		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 			IEEE Transactions on Dependable and Secure Computing (TDSC), 2019-23.</i></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ACM Transactions on Software Engineering and Methodology (TOSEM), currently 
-	serving, EiC for <b>
-	<a href="https://dl.acm.org/journal/tosem/continuous-special-sections-on-security-and-SE">Continuous Special Section on Security and SE.</a></b></i></p> 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>IEEE Transactions on Software Engineering (TSE), 
+		<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			ACM Transactions on Software Engineering and Methodology (TOSEM), 2019-24.</i></p> 	
+			<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
+				<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>
+				IEEE Transactions on Software Engineering (TSE), 
 	2014-18.</p> 	
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	&nbsp;</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 	<i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
