--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         
-	<li> <b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort on Agentic AI research launched !! </font><br><br>
+	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort on Agentic AI research launched !! </font><br><br>
 		
 	<li><font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
