--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
 	&nbsp;<a href="https://nus-tss.github.io/">[TSS Group]</a> &nbsp;
+		<a href="https://spartan-nus.github.io/">[SPARTAN Effort]</a> &nbsp;
 		<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">[Google Scholar]</a>&nbsp;
 	 <a href="papers.html">[PAPERS]</a>&nbsp;
 	 <a href="service.html">[SERVICE]</a>&nbsp;
@@ -161,6 +162,7 @@
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
+	<li><font face="Arial"><a href="https://spartan-nus.github.io/">SPARTAN effort in Trusted Agents @ NUS</a></font></li>
 	<li><font face="Arial">
 	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
